--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "ultra/result",
+    "version": "1.0.1",
     "type": "library",
     "description": "Allows you to process valid results and states, undefined states and error states as objects of a single interface.",
     "license": "MIT",
