--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "ultra/result",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "type": "library",
-    "description": "Allows you to process valid results and states, undefined states and error states as objects of a single interface.",
+    "description": "Allows you to process valid results and states, undefined states, and error states as objects of a single interface.",
     "license": "MIT",
     "repositories": [
         {
